Added template syllabus
Added templates/new_syllabus.xlsx template.
Revised .gitignore to ignore /testing subdirectory and contents.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # From development of LMS Migrator in Jupyter notebook
 .ipynb_checkpoints
-migrator.ipynb
+*.ipynb
 
 # Files used in testing
-old_course.imscc
-new_course.imscc
-new_syllabus.xlsx
+/testing/*
